# golang-applications

./: .gitignore  BUILD.bazel  WORKSPACE
gql-server/: BUILD.bazel  go.mod  go.sum  gqlgen.yml  server.go
gql-server/graph/: generated.go  resolver.go  schema.resolvers.go
