load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gql-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/pecolynx/golang-applications/gql-server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gql-server",
    embed = [":gql-server_lib"],
    visibility = ["//visibility:public"],
)
